<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_baseline_favorite_border_24"
        android:title="@string/favorite"
        android:tooltipText="@string/favorite" />
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        android:tooltipText="@string/home" />

    <item
        android:id="@+id/alerts"
        android:icon="@drawable/ic_baseline_add_alert_24"
        android:title="@string/alerts"
        android:tooltipText="@string/alerts" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        android:tooltipText="@string/settings" />

</menu>