<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>

    </data>

    <LinearLayout
        android:id="@+id/currentWeatherFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg5"
        android:orientation="vertical"
        >




        <LinearLayout
            android:id="@+id/currentWeatherLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg5"
            android:orientation="vertical"
            >


            <TextView

                android:id="@+id/txtFavLocation"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:gravity="center"
                android:maxLines="1"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="25sp"
                tools:text="Alexandria" />



            <TextView
                android:id="@+id/txtFavTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"
                android:textSize="40sp"
                tools:text="25\u00b0" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"

                >



                <TextView
                    android:id="@+id/feelsLikeFavTemp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    tools:text="20\u00b0" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtFavWeatherDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                tools:text="Clear" />

            <ImageView
                android:id="@+id/currentFavWeatherIcon"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/cloud_online" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:weightSum="3"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:src="@drawable/pressure2" />

                    <TextView
                        android:id="@+id/pressure"
                        android:layout_width="wrap_content"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:text="@string/pressure" />

                    <TextView
                        android:id="@+id/txtFavPressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/white"

                        android:textSize="16sp"
                        tools:text="50 mBar" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_baseline_air_24"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@string/windSpeed"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        />

                    <TextView
                        android:id="@+id/txtFavWindSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:text="30 km/hr" />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:src="@drawable/humidity" />

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif"
                        android:textSize="18sp"
                        android:text="@string/humidity"/>

                    <TextView
                        android:id="@+id/txtFavHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif"
                        android:textSize="16sp"
                        tools:text="5%" />

                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txtFavLastUpdated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:textColor="@color/white"
                android:textSize="12sp"
                tools:text="Last updated: 6:45" />

            <View
                android:id="@+id/viewOne"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/white" />
        </LinearLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="center"
            android:id="@+id/loadingFavProgressBar"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcHourlyFavWeatherList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg1"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/hourly_recycler_view"
            />

        <View
            android:id="@+id/viewTwo"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcDailyFavWeatherList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/daily_recycler_view"
            />
    </LinearLayout>
</layout>

